# Rebraze-cef-7

./: .gitignore  CEF_OAUTH_SETUP.md  CMakeLists.txt  QUICKSTART.md  README.md  backend.env.example  clean_build.sh  test_oauth_server.sh  update_frontend.sh  verify_setup.sh  websocket_client.py
cef_app/include/: app.h  client_handler.h  message_handler.h  oauth_server.h  resource_request_handler.h  utils.h
cef_app/resources/mac/: Info.plist  helper-Info.plist
cef_app/src/: app.cpp  client_handler.cpp  main.cpp  main_linux.cpp  main_mac.mm  main_win.cpp  message_handler.cpp  oauth_server.cpp  process_helper_mac.cpp  utils.cpp
frontend/: AUTH_IMPLEMENTATION.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/common/: MeetingModal.tsx  NavItem.tsx
frontend/src/components/dashboard/: DashboardHeader.tsx  FolderCard.tsx  GlobalAiPanel.tsx  MeetingCard.tsx  MeetingsView.tsx  ProjectCard.tsx  ProjectsGrid.tsx  RecentFolders.tsx  Toolbar.tsx
frontend/src/components/recording/: MaximizedMeetingExplorer.tsx  MeetingExplorer.tsx  MeetingHeader.tsx  MeetingInfoPanel.tsx  MeetingNotes.tsx  MeetingSidebar.tsx  MeetingWorkspace.tsx  VideoPlayer.tsx
frontend/src/components/workspace/: ChatInterface.tsx  ContextMenu.tsx  FileSidebar.tsx  FileSystemExplorer.tsx  FileViewer.tsx  MaximizedExplorer.tsx  WorkspaceHeader.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/mocks/: meetings.ts  projects.ts
frontend/src/pages/: AuthCallback.tsx  Dashboard.tsx  Login.tsx  Meeting.tsx  RecordingViewer.tsx  Workspace.tsx
frontend/src/services/: authService.ts  config.ts  geminiService.ts  meetingService.ts
frontend/src/utils/: cefBridge.ts  fileSystemUtils.tsx
resources/: ui_layout.html
scripts/: build_linux.sh  build_mac.sh  build_win.bat  download_cef.sh
